Bug fixes - scss @import warning - styling input:submit on mobile safari - screen width on mobile

--- a/imports/ui/styles/_5_buttons.scss
+++ b/imports/ui/styles/_5_buttons.scss
@@ -6,7 +6,7 @@
     }
 }
 
-.main-button {
+.main-button, input[type=submit].main-button {
     @include btn;
     border-radius: 3px;
     color: white;
